--- a/3DRPG.vcxproj.filters
+++ b/3DRPG.vcxproj.filters
@@ -155,6 +155,12 @@
     <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\DXR_Basic.cpp">
       <Filter>Common\Direct3DWrapper\DX_3DCG</Filter>
     </ClCompile>
+    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\DxSkinnedCom.cpp">
+      <Filter>Common\Direct3DWrapper\DX_3DCG</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Common\DirectInputWrapper\DxInput.cpp">
+      <Filter>Common\DirectInputWrapper</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sourcecode\Battle.h">
@@ -343,6 +349,24 @@
     <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderCalculateLighting.h">
       <Filter>Common\Direct3DWrapper\DX_3DCG\ShaderCG</Filter>
     </ClInclude>
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\DxSkinnedCom.h">
+      <Filter>Common\Direct3DWrapper\DX_3DCG</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderGsOutput.h">
+      <Filter>Common\Direct3DWrapper\DX_3DCG\ShaderCG</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderSkinMeshCom.h">
+      <Filter>Common\Direct3DWrapper\DX_3DCG\ShaderCG</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderDXR\ShaderCommonDXR.h">
+      <Filter>Common\Direct3DWrapper\DX_3DCG\ShaderDXR</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderDXR\ShaderParametersDXR.h">
+      <Filter>Common\Direct3DWrapper\DX_3DCG\ShaderDXR</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\DirectInputWrapper\DxInput.h">
+      <Filter>Common\DirectInputWrapper</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Battle">
@@ -431,6 +455,9 @@
     </Filter>
     <Filter Include="Common\Direct3DWrapper\DX_3DCG\ShaderDXR">
       <UniqueIdentifier>{1a26fc44-2be9-48b4-8797-360f2f00321c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Common\DirectInputWrapper">
+      <UniqueIdentifier>{2a34edcf-a7c3-4f26-9222-6fb130233b1d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
