--- a/3DRPG.vcxproj
+++ b/3DRPG.vcxproj
@@ -19,16 +19,20 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Common\Direct3DWrapper\DxText_DrawText.cpp" />
-    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Dx12ProcessCore_Initialize.cpp" />
-    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\DxFunction.cpp" />
-    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\DXR_Basic.cpp" />
+    <ClCompile Include="..\Common\Direct3DWrapper\DxText.cpp" />
+    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Core\Dx12ProcessCore.cpp" />
+    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Core\DxCommandQueue.cpp" />
+    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Core\Dx_CommandListObj.cpp" />
+    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Core\Dx_Common.cpp" />
+    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Core\Dx_Device.cpp" />
+    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Core\Dx_PolygonData.cpp" />
+    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Core\Dx_PolygonData2D.cpp" />
+    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Core\Dx_ShaderHolder.cpp" />
+    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Core\Dx_Util.cpp" />
+    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\DXR\DXR_Basic.cpp" />
     <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\DxSkinnedCom.cpp" />
-    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_Common.cpp" />
-    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_MeshData_GetVBarray.cpp" />
-    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_ParticleData_CreateParticle.cpp" />
-    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_PolygonData2D_GetVBarray2D.cpp" />
-    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_PolygonData_GetVBarray.cpp" />
+    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_MeshData.cpp" />
+    <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_ParticleData.cpp" />
     <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_PostEffect.cpp" />
     <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_SkinMesh.cpp" />
     <ClCompile Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_Wave.cpp" />
@@ -42,6 +46,7 @@
     <ClCompile Include="..\Common\TextureLoader\TextureLoader.cpp" />
     <ClCompile Include="..\Common\Window\Control_Direction.cpp" />
     <ClCompile Include="..\Common\Window\Win.cpp" />
+    <ClCompile Include="..\CoordTf\CoordTf.cpp" />
     <ClCompile Include="..\DecompressDeflate\DecompressDeflate.cpp" />
     <ClCompile Include="..\FbxLoader\FbxLoader.cpp" />
     <ClCompile Include="..\FbxLoader\FbxMeshNode.cpp" />
@@ -77,39 +82,42 @@
   <ItemGroup>
     <ClInclude Include="..\Common\Direct3DWrapper\Dx12Process.h" />
     <ClInclude Include="..\Common\Direct3DWrapper\DxText.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Dx12ProcessCore.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\DxEnum.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\DxFunction.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\DXR_Basic.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\Dx12ProcessCore.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\DxCommandQueue.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\DxEnum.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\DxStruct.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\Dx_CommandListObj.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\Dx_Device.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\Dx_ShaderHolder.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\Dx_Util.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\Shader2D.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\Shader3D.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderCalculateLighting.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderCommonParameters.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderCommonPS.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderCommonTriangleGS.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderCommonTriangleHSDS.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderGsOutput.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderMesh.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderMesh_D.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderNormalTangent.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderParticle.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderPostEffect.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderSkinMesh.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderSkinMeshCom.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderSkinMesh_D.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderWaveCom.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Core\ShaderCG\ShaderWaveDraw.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\DXR\DXR_Basic.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\DXR\ShaderDXR\ShaderBasicDXR.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\DXR\ShaderDXR\ShaderCommonDXR.h" />
+    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\DXR\ShaderDXR\ShaderParametersDXR.h" />
     <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\DxSkinnedCom.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\DxStruct.h" />
     <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_MeshData.h" />
     <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_ParticleData.h" />
     <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_PostEffect.h" />
     <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_SkinMesh.h" />
     <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\Dx_Wave.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\Shader2D.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\Shader3D.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderCalculateLighting.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderCommonParameters.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderCommonPS.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderCommonTriangleGS.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderCommonTriangleHSDS.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderFunction.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderGsOutput.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderMesh.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderMesh_D.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderNormalTangent.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderParticle.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderPostEffect.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderSkinMesh.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderSkinMeshCom.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderSkinMesh_D.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderWaveCom.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderCG\ShaderWaveDraw.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderDXR\ShaderBasicDXR.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderDXR\ShaderCommonDXR.h" />
-    <ClInclude Include="..\Common\Direct3DWrapper\DX_3DCG\ShaderDXR\ShaderParametersDXR.h" />
     <ClInclude Include="..\Common\Direct3DWrapper\MicroSoftLibrary\d3dx12.h" />
     <ClInclude Include="..\Common\DirectInputWrapper\DxInput.h" />
     <ClInclude Include="..\Common\DirectShowWrapper\Camera.h" />
@@ -122,6 +130,7 @@
     <ClInclude Include="..\Common\TextureLoader\TextureLoader.h" />
     <ClInclude Include="..\Common\Window\Control.h" />
     <ClInclude Include="..\Common\Window\Win.h" />
+    <ClInclude Include="..\CoordTf\CoordTf.h" />
     <ClInclude Include="..\DecompressDeflate\DecompressDeflate.h" />
     <ClInclude Include="..\FbxLoader\FbxLoader.h" />
     <ClInclude Include="..\FbxLoader\FbxMeshNode.h" />
